// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminBarWidgets should not render the Activate Analytics CTA when the Analytics module is not available 1`] = `
<div>
  <div
    class="mdc-layout-grid__inner"
  >
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-impressions googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            <span
              class="googlesitekit-data-block__title-inner"
            >
              Total Impressions
            </span>
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            4.6K
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-clicks googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            <span
              class="googlesitekit-data-block__title-inner"
            >
              Total Clicks
            </span>
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            123
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminBarWidgets should render the Admin Bar Widgets, including the Activate Analytics CTA 1`] = `
<div>
  <div
    class="mdc-layout-grid__inner"
  >
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-impressions googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            <span
              class="googlesitekit-data-block__title-inner"
            >
              Total Impressions
            </span>
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            4.6K
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet"
    >
      <div
        class="googlesitekit-data-block overview-total-clicks googlesitekit-data-block--default"
        tabindex="-1"
      >
        <div
          class="googlesitekit-data-block__title-datapoint-wrapper"
        >
          <h3
            class=" googlesitekit-subheading-1 googlesitekit-data-block__title "
          >
            <span
              class="googlesitekit-data-block__title-inner"
            >
              Total Clicks
            </span>
          </h3>
          <div
            class="googlesitekit-data-block__datapoint"
          >
            123
          </div>
        </div>
        <div
          class="googlesitekit-data-block__change-source-wrapper"
        >
          <div
            class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
          >
            <span
              class="googlesitekit-data-block__value"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet"
    >
      <div
        class="googlesitekit-analytics-cta"
      >
        <div
          class="googlesitekit-analytics-cta__preview-graphs"
        >
          <div
            class="googlesitekit-analytics-cta__preview-graph"
          >
            <h3
              class="googlesitekit-analytics-cta__preview-graph--title"
            >
              Traffic
            </h3>
            <div>
              <svg />
            </div>
          </div>
          <div
            class="googlesitekit-analytics-cta__preview-graph"
          >
            <h3
              class="googlesitekit-analytics-cta__preview-graph--title"
            >
              Unique visitors from Search
            </h3>
            <div>
              <svg />
            </div>
            <div
              class="googlesitekit-analytics-cta__preview-graph--icons"
            >
              <svg />
              <span
                class="googlesitekit-analytics-cta__preview-graph--bar"
              />
            </div>
          </div>
        </div>
        <div
          class="googlesitekit-analytics-cta__details"
        >
          <p
            class="googlesitekit-analytics-cta--description"
          >
            See how many people visit your site from Search and track how you’re achieving your goals
          </p>
          <button
            class="mdc-button googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Set up Google Analytics
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
